# ksef2-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: docs.manifest.json  intro.md
docs/contributing/: architecture.md  rendering-refactor-plan.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: authentication.md  configuration.md  invoices.md
docs/pl/: intro.md
docs/reference/: commands.md
src/ksef2_cli/: __init__.py  __main__.py  app.py  config.py  context.py  exceptions.py  invoice_workflows.py  io.py  local_config.py  parsing.py  rendering.py  results.py  runtime.py  sdk_models.py
src/ksef2_cli/commands/: __init__.py  auth.py  batch.py  certificates.py  config.py  encryption.py  invoices.py  limits.py  online.py  peppol.py  permissions.py  profile.py  sessions.py  testdata.py  tokens.py
src/ksef2_cli/commands/invoices/: __init__.py  export.py  group.py  metadata.py  models.py  receipts.py  send.py
src/ksef2_cli/renderers/: __init__.py  json.py  text.py
src/ksef2_cli/renderers/rows/: __init__.py  auth.py  peppol.py  results.py  sdk.py  testdata.py  tokens.py
tests/: conftest.py
tests/component/: test_app.py  test_config_commands.py
tests/component/commands/: test_auth_public_limits.py  test_certificates.py  test_invoices.py  test_online_batch.py  test_permissions.py  test_testdata.py
tests/e2e/: README.md
tests/unit/: test_context.py  test_exceptions.py  test_helpers.py  test_local_config.py
tests/unit/test_renderers/: test_json.py  test_text.py
